cmake_minimum_required(VERSION 3.13)
project(art)
include(CTest)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -g")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address")
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(tests)
add_executable(measure measurements/measurements.cpp)

add_test(NAME art_test COMMAND art_test)